# tools-python

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-hooks.yaml  .python-version  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.MD  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  README  README.md  RELEASING.md  appveyor.yml  circle.yml  parse_rdf.py  parse_tv_ex.py  pp_tv.py  project_details.md  pyproject.toml  rdf_pp.py  rdf_to_tv.py  requirements.txt  setup.cfg  setup.py  stdeb.cfg  test.jsonld.jsonld  tox.ini  write_tv_ex.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check_codestyle.yml  docs.yml  install_and_test.yml  integration_test.yml  prepare_release.yml
.reuse/: dep5
Examples/: SPDXRdfExample.rdf  SPDXSimpleTag.tag  SPDXSpreadsheetExample.xls  SPDXTagExample.tag
data/: SPDXJsonExample.json  SPDXRdfExample.json  SPDXRdfExample.rdf  SPDXSimpleTag.tag  SPDXTagExample.tag  SPDXXmlExample.xml  SPDXYamlExample.yaml  sample.csv
dev/: gen_model_to_rdf.py  gen_python_model_from_spec.py  model_dump.json  publish_from_tag.sh
dev/model_gen/: class_templates.py  gen_class.py  general_templates.py  utils.py  vocab_templates.py
examples/: merge_tag.py  merge_tv.py  parse_json.py  parse_rdf.py  parse_tv.py  parse_xml.py  parse_yaml.py  pp_rdf.py  pp_tv.py  rdf_to_json.py  rdf_to_tv.py  rdf_to_xml.py  rdf_to_yaml.py  spdx2_convert_format.py  spdx2_convert_to_spdx3.py  spdx2_document_from_scratch.py  spdx2_generate_graph.py  spdx2_parse_file.py  tv_to_json.py  tv_to_rdf.py  tv_to_xml.py  tv_to_yaml.py  write_tv.py
spdx/: annotation.py  checksum.py  config.py  creationinfo.py  document.py  file.py  license.py  package.py  relationship.py  review.py  snippet.py  spdx_licenselist.csv  tv_to_rdf.py  utils.py  version.py
spdx/cli_tools/: __init__.py  convertor.py  parser.py  sbom_generator.py
spdx/parsers/: __init__.py  builderexceptions.py  json_builders.py  json_parser.py  jsonparser.py  jsonyaml.py  jsonyamlbuilders.py  jsonyamlxml.py  jsonyamlxmlbuilders.py  loggers.py  parse_anything.py  parsetab.py  rdf.py  rdfbuilders.py  tagvalue.py  tagvalue_builders.py  tagvaluebuilders.py  validations.py  xmlparser.py  yaml.py  yamlparser.py
spdx/writers/: json.py  jsonyaml.py  jsonyamlxml.py  rdf.py  tagvalue.py  write_anything.py  xml.py  yaml.py
src/: config.py  datetime_conversions.py  document_utils.py  formats.py  licenses.json
src/clitools/: convertor.py  parser.py  pyspdxtools.py
src/conversion/: __init__.py  convert_creation_information.py  convert_spdx_document.py  creation_information_conversion.py  file_conversion.py  message.py  package_conversion.py  snippet_conversion.py  spdx_document_conversion.py
src/jsonschema/: annotation_converter.py  annotation_properties.py  checksum_converter.py  checksum_properties.py  common_conversions.py  converter.py  creation_info_converter.py  creation_info_properties.py  document_converter.py  document_properties.py  external_document_ref_converter.py  external_document_ref_properties.py  external_package_ref_converter.py  external_package_ref_properties.py  extracted_licensing_info_converter.py  extracted_licensing_info_properties.py  file_converter.py  file_properties.py  json_property.py  optional_utils.py  package_converter.py  package_properties.py  package_verification_code_converter.py  package_verification_code_properties.py  relationship_converter.py  relationship_properties.py  snippet_converter.py  snippet_properties.py
src/model/: actor.py  annotation.py  checksum.py  constructor_type_errors.py  dataclass_with_properties.py  document.py  external_document_ref.py  extracted_licensing_info.py  file.py  license.py  license_expression.py  package.py  relationship.py  relationship_filters.py  snippet.py  spdx_no_assertion.py  spdx_none.py  type_checks.py  version.py
src/parser/: annotationparser.py  creationinfoparser.py  error.py  extractedlicensingparser.py  fileparser.py  jsonparser.py  logger.py  packageparser.py  parse_anything.py  relationshipparser.py  reviewparser.py  snippetparser.py
src/spdx/: casing_tools.py  config.py  creationinfo.py  datetime_conversions.py  document.py  document_utils.py  exceptions.json  formats.py  graph_generation.py  package.py  review.py  spdx_licenselist_v1.19.csv  version.py
src/spdx3/: README.md  payload.py  spdx_id_map.py
src/validation/: actor_validator.py  annotation_validator.py  checksum_validator.py  creation_info_validator.py  document_validator.py  external_document_ref_validator.py  external_package_ref_validator.py  extracted_license_info_validator.py  extracted_licensing_info_validator.py  file_validator.py  license_expression_validator.py  package_validator.py  package_verification_code_validator.py  relationship_validator.py  snippet_validator.py  spdx_id_validation.py  spdx_id_validator.py  spdx_id_validators.py  string_type_validators.py  uri_validator.py  uri_validators.py  validation_message.py
src/writer/: casing_tools.py  write_anything.py
tests/: SPDX3_jsonld_test.jsonld  builder_tests.py  conversion_tests.py  creationinfo_tests.py  document_tests.py  fixtures.py  mock_utils.py  tag_value_parser_tests.py  test_builder.py  test_checksum.py  test_cli_convertor.py  test_config.py  test_conversion.py  test_creationinfo.py  test_datetime_conversions.py  test_document.py  test_error_messages.py  test_jsonyaml_parser.py  test_jsonyamlxml_parser.py  test_jsonyamlxml_writer.py  test_license_expression_parser.py  test_package.py  test_parse_anything.py  test_parsers_validation.py  test_rdf_parser.py  test_rdf_writer.py  test_tag_value_parser.py  test_unicodecsv.py  test_write_anything.py  testing_utils.LICENSE  testing_utils.py  utils_test.py  valid_defaults.py
tests/clitools/: test_cli_convertor.py
tests/conversion/: test_file_conversion.py  test_package_conversion.py  test_snippet_conversion.py  test_spdx_document_conversion.py
tests/jsonschema/: __init__.py  test_annotation_converter.py  test_checksum_converter.py  test_converter.py  test_creation_info_converter.py  (+9 more)
(+993 files in other folders)
