[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "spdx-tools"
authors = [{ name = "Ahmed H. Ismail", email = "ahm3d.hisham@gmail.com" }]
maintainers = [
    { name = "Philippe Ombredanne", email = "pombredanne@gmail.com" },
    { name = "SPDX group at the Linux Foundation and others" },
]
license = "Apache-2.0"
description = "SPDX parser and tools."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "beartype",
    "click",
    "license_expression",
    "ply",
    "pyyaml",
    "rdflib",
    "semantic_version",
    "uritools",
    "xmltodict",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pyshacl", "pytest", "tzdata"]
code_style = ["black", "flake8", "isort"]
graph_generation = ["networkx", "pygraphviz"]
development = ["black", "flake8", "isort", "networkx", "pyshacl", "pytest"]

[project.scripts]
pyspdxtools = "spdx_tools.spdx.clitools.pyspdxtools:main"
pyspdxtools3 = "spdx_tools.spdx3.clitools.pyspdxtools3:main"

[project.urls]
Homepage = "https://github.com/spdx/tools-python"
Documentation = "https://spdx.github.io/tools-python/"
Repository = "https://github.com/spdx/tools-python.git"
Issues = "https://github.com/spdx/tools-python/issues"
Changelog = "https://github.com/spdx/tools-python/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# the default git describe resolves to the tag `python3.6` because the current release tag is not on main
# by adding "v" the command resolves to the alpha release of 0.7.0 which leads to the desired name spdx-tools-0.7.0
[tool.setuptools_scm]
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*"]

[tool.aliases]
release = "clean --all sdist --formats=gztar bdist_wheel"

[tool.black]
line-length = 119
include = "(^/src/.*.py|^/tests/.*.py)"

[tool.isort]
profile = "black"
line_length = 119
skip = ["__init__.py"]

[tool.pytest.ini_options]
norecursedirs = []  # overwrite the default to not skip tests/build folder which is needed in spdx3
