[metadata]
name = spdx-tools
author = Ahmed H. Ismail
author_email = ahm3d.hisham@gmail.com
maintainer = Philippe Ombredanne, SPDX group at the Linux Foundation and others
maintainer_email = pombredanne@gmail.com
license = Apache-2.0
license_file = LICENSE
description = SPDX parser and tools.
url = https://github.com/spdx/tools-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False  # because of the uses of __file__: https://github.com/spdx/tools-python/issues/257
packages = find:
install_requires = ply; rdflib; click; pyyaml; xmltodict
include_package_data = True
python_requires = >=3.6
test_suite = setup.test_suite

[options.extras_require]
test = pytest

[options.packages.find]
include = 
    spdx
    spdx.*

[options.entry_points]
console_scripts =
    pyspdxtools_convertor = spdx.cli_tools.convertor:main
    pyspdxtools_parser = spdx.cli_tools.parser:main

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel
